ensure words do not break with hyphens on mobile

--- a/express/styles/styles.css
+++ b/express/styles/styles.css
@@ -103,6 +103,14 @@ body {
   padding: 0;
 }
 
+body[data-device="mobile"] {
+  h1, h2 {
+    hyphens: none;
+    overflow-wrap: break-word; 
+    word-wrap: break-word;     
+  }
+}
+
 body.no-scroll {
   overflow-y: hidden;
   touch-action: none;
